--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">VideoClient</string>
+    <string name="app_name">Symptom Management</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="userName">Username</string>
@@ -10,5 +10,9 @@
     <string name="server">Server IP or Hostname</string>
     <string name="localhost">https://10.0.2.2:8443</string>
     <string name="title_activity_video_list">VideoListActivity</string>
+    <string name="doctor">Doctor</string>
+    <string name="patient">Patient</string>
+    <string name="title_activity_patients_list">Patient\'s list</string>
+    <string name="title_activity_checkins_list">Check-in\'s list</string>
 
 </resources>
